# src/main/java/org/taller01/catalogservice/web/ProductController.java
@@ -1,14 +1,17 @@
 package org.taller01.catalogservice.web;
 
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import org.taller01.catalogservice.domain.Product;
-import org.taller01.catalogservice.dto.ProductCreateUpdateDto;
+import org.taller01.catalogservice.dto.ProductCreateDto;
+import org.taller01.catalogservice.dto.ProductUpdateDto;
 import org.taller01.catalogservice.service.ProductService;
 
+@Tag(name = "Catalog", description = "Products catalog management API")
 @RestController
 @RequestMapping("/api/products")
 @RequiredArgsConstructor
@@ -28,12 +31,12 @@ public class ProductController {
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    public Product create(@RequestBody @Valid ProductCreateUpdateDto dto) {
+    public Product create(@RequestBody @Valid ProductCreateDto dto) {
         return service.create(dto);
     }
 
     @PutMapping("/{id}")
-    public Product update(@PathVariable String id, @RequestBody @Valid ProductCreateUpdateDto dto) {
+    public Product update(@PathVariable String id, @RequestBody @Valid ProductUpdateDto dto) {
         return service.update(id, dto);
     }
 
